 * Fix: "Your recent edits" list on dashboard no longer leaves out pages that another user has subsequently edited (Michael Cordover, Kees Hink, João Luiz Lorencetti)
 * Fix: `InlinePanel` now accepts a `classname` parameter as per the documentation (emg36, Matt Westcott)


1.6.2 (02.09.2016)
~~~~~~~~~~~~~~~~~~

 * Fix: Initial values of checkboxes on group permission edit form now are visible on Django 1.10 (Matt Westcott)


1.6.1 (26.08.2016)
~~~~~~~~~~~~~~~~~~

 * Added ``WAGTAIL_ALLOW_UNICODE_SLUGS`` setting to make Unicode support optional in page slugs (Matt Westcott)
 * Fix: Wagtail's middleware classes are now compatible with Django 1.10's new-style middleware (Karl Hobley)
 * Fix: The `Pages.can_create_at` method is now checked in the create page view (Mikalai Radchuk)
 * Fix: Fixed regression on Django 1.10.1 causing Page subclasses to fail to use PageManager (Matt Westcott)
 * Fix: ChoiceBlocks with lazy translations as option labels no longer break Elasticsearch indexing (Matt Westcott)
 * Fix: The page editor no longer fails to load JavaScript files with ``ManifestStaticFilesStorage`` (Matt Westcott)
 * Fix: Django 1.10 enables client-side validation for all forms by default, but it fails to handle all the nuances of how forms are used in Wagtail. The client-side validation has been disabled for the Wagtail UI (Matt Westcott)


1.6 (15.08.2016)
~~~~~~~~~~~~~~~~

 * Django 1.10 support
 * Added the ``include_block`` template tag for improved StreamField template inclusion (Matt Westcott, Mikalai Radchuk)
 * Page slugs now allow unicode on Django >= 1.9 (Behzad Nategh)
 * Explorer sidebar menu now limits the displayed pages to the ones the user has permission for (Robert Rollins, Matt Westcott)
 * Image upload form in image chooser now performs client side validation so that the selected file is not lost in the submission (Jack Paine)
 * oEmbed URL for audioBoom was updated (Janneke Janssen)